--- a/AI_HCI_coding_1.ipynb
+++ b/AI_HCI_coding_1.ipynb
@@ -21,7 +21,7 @@
       "outputs": [],
       "source": [
         "# gen_api_key = userdata.get('gemini_api')\n",
-        "gen_api_key = \"AIzaSyAGPHCOlk3hOYAuux3p3t18vSMVgNOQ7V4\"\n",
+        "gen_api_key = \"ENTER YOUR API KEY"\n",
         "genai.configure(api_key=gen_api_key)\n",
         "\n",
         "# Create the model config\n",
